[package]
name = "lmtyas"
description = "let-me-tell-you-a-secret, a web service that allows an authenticated user to send secrets like passwords to other authenticated users."
version = "2.2.18"
edition = "2021"
authors = ["Sven Putze <github@hardcodes.de>", "Matthias Bläsing"]
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-http = "3"
actix-web = { version = "4", features=["openssl"] }
actix-web-httpauth = "0.8"
async-trait = "0.1.57"
base64 = "0.21.0"
chrono = "0.4.0"
clap = "4"
env_logger = "0.10"
futures-util = "0.3"
ldap3 = "0.11"
lettre = "0.10"
log = "0.4"
openidconnect = { version = "3.0.0", optional = true}
openssl = "0.10"
percent-encoding = "2.1"
regex = "1"
secstr = { version = "0.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1"
timer = "0.2"
uuid = { version = "1", features = ["v1"] }
zeroize = "1.5.7"

[features]
default = ["oidc-auth-ldap", "mail-noauth-notls"]
ldap-auth = ["ldap-common", "get-userdata-ldap"]
ldap-common = []
oidc-auth-ldap = ["authentication-oidc", "oidc-ldap", "ldap-common", "get-userdata-ldap"]
authentication-oidc = ["dep:openidconnect"]
oidc-ldap = []
get-userdata-ldap = []
mail-noauth-notls = []
mail-noauth-notls-smime = []
no-userdata-backend = []

[dev-dependencies]
actix-rt = "*"
async-mutex = "1.4.0"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }

[profile.release]
# Strip symbols to reduce binary size
strip = "symbols"
# Enable Link Time Optimization (LTO) to reduce binary size (longer build times)
lto = true
# Reduce parallel code generation units to increase optimization and reduce binary size (longer build times)
codegen-units = 1
