[package]
name = "lmtyas"
description = "let-me-tell-you-a-secret, a web service that allows an authenticated user to send secrets like passwords to other authenticated users in a secure way."
version = "4.1.29"
edition = "2021"
authors = ["Sven Putze <github@hardcodes.de>", "Matthias Bläsing"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hardcodes/lmtyas"
#
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.8"
actix-http = "3.11.2"
actix-web = { version = "4.10.2", features = ["rustls-0_23"] }
actix-web-httpauth = "0.8"
async-fs = "2.2.0"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = "0.4.42"
clap = "4.5.47"
env_logger = "0.11.7"
futures = "0.3"
futures-util = "0.3"
# hacaoi, version = "0.1.14"
hacaoi = { git = "https://github.com/hardcodes/hacaoi.git", rev = "9d87907eacc684f16a5a5ad1520e2cc232b93ece", default-features = false, optional = true }
ldap3 = "0.11"
lettre = "0.11.18"
log = "0.4.28"
openidconnect = { version = "4.0.1", optional = true}
percent-encoding = "2.3.2"
rand = "0.9.2"
regex = "1.11.2"
rustls = "0.23.31"
secstr = { version = "0.5", features = ["serde"] }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
serde_regex = "1"
timer = "0.2"
uuid = { version = "1.18.1", features = ["v1", "serde"] }
zeroize = "1.5.7"

[features]
default = ["oidc-auth-ldap", "mail-noauth-notls", "api-access-token", "hacaoi-rust-crypto"]
ldap-auth = ["ldap-common", "get-userdata-ldap"]
ldap-common = []
oidc-auth-ldap = ["authentication-oidc", "oidc-ldap", "ldap-common", "get-userdata-ldap"]
authentication-oidc = ["dep:openidconnect"]
oidc-ldap = []
get-userdata-ldap = []
mail-noauth-notls = []
no-userdata-backend = []
api-access-token = []
hacaoi-openssl = ["dep:hacaoi","hacaoi/openssl","hacaoi/b64"]
hacaoi-rust-crypto = ["dep:hacaoi","hacaoi/rust-crypto","hacaoi/b64"]

[dev-dependencies]
actix-rt = "*"
async-mutex = "1.4.0"
lazy_static = "1.5.0"
tokio = { version = "1.47.1", features = ["full"] }
rand = "0.9.2"
reqwest = "0.12.23"

[profile.release]
# Strip symbols to reduce binary size
strip = "symbols"
# Enable Link Time Optimization (LTO) to reduce binary size (longer build times)
lto = true
# Reduce parallel code generation units to increase optimization and reduce binary size (longer build times)
codegen-units = 1
